--- a/DemoApp/Pages/Partial/CheckboxEnum.cshtml
+++ b/DemoApp/Pages/Partial/CheckboxEnum.cshtml
@@ -1,7 +1,7 @@
 ﻿@* 
     Brukes for å rendre enum-verdi som checkbox, hvor enum-caption blir checkbox-caption istf. navn eller caption fra AppInfo
 *@
-@using DemoApp.Models.Fagsystem
+@using DemoApp.Models.Simulator
 @using DemoApp.Models.ViewModels
 @model PropertyRendererModel
 @{
