--- a/DemoApp/Pages/Partial/OptionalBlock.cshtml
+++ b/DemoApp/Pages/Partial/OptionalBlock.cshtml
@@ -1,4 +1,4 @@
-﻿@using DemoApp.Models.Fagsystem
+﻿@using DemoApp.Models.Simulator
 @using System.Xml.Schema;
 @model DemoApp.Models.ViewModels.PropertyRendererModel
 @{
