--- a/DemoApp/Pages/Partial/Beskrivelse.cshtml
+++ b/DemoApp/Pages/Partial/Beskrivelse.cshtml
@@ -6,7 +6,7 @@
     @if (!string.IsNullOrEmpty(Model))
     {
         var value = HtmlEncoder.Encode(Model);
-        value = value.Replace("#$", "<br /><b>").Replace("$#", "</b><br />");
+        value = value.Replace("#$", "<b>").Replace("$#", "</b>").Replace("|", "<br />").Replace("#@", "&#8226;");
         <div class="gruppe_beskrivelse">@Html.Raw(value)</div>
     }
 }
