--- a/DemoApp/Pages/Partial/Duplicator.cshtml
+++ b/DemoApp/Pages/Partial/Duplicator.cshtml
@@ -1,20 +1,30 @@
 ﻿@using DemoApp.Models
 @using DemoApp.Models.ViewModels
 @model PropertyRendererModel
-@{  
+@{
     var caption = Model.GetCaption(false);
+    var prefillItems = Model.GetPrefilledItems(Model.GetId());
     var minOccurs = XsdUtils.GetMinOccurs(Model.Prop);
     var maxOccurs = XsdUtils.GetMaxOccurs(Model.Prop);
+    var count = (prefillItems.Count > 0) ? prefillItems.Count : minOccurs;
     var description = Model.GetDescription();
-    <div>
-        <input id="@Model.GetRawId()_counter" type="hidden" value="@minOccurs" />
+    Model.UseCaption = false;
+    Model.UseDescription = false;
+    <div class="dummy">
+        <input id="@Model.GetRawId()_counter" type="hidden" value="@count" />
         <input id="@Model.GetRawId()_minOccurs" type="hidden" value="@minOccurs" />
         <input id="@Model.GetRawId()_maxOccurs" type="hidden" value="@maxOccurs" />
         <div id="@Model.GetRawId()_template" class="hidden_template">
             <h2>@Model.GetCaption(true):0.template</h2>
             @await Html.PartialAsync("Gruppe.cshtml", Model)
         </div>
+        <h1>@caption</h1>
         @await Html.PartialAsync("Beskrivelse.cshtml", description)
+        @foreach(var item in prefillItems)
+        {
+            Model.ItemNo += 1;
+            @await Html.PartialAsync("Gruppe.cshtml", Model)
+        }
         <input type="button" id="@Model.GetRawId()_new" onclick="createNewFromTemplate('@Model.GetRawId()')" value="Ny @caption" class="new_button" />
     </div>
 }
