--- a/DemoApp/Pages/Partial/FixedBoolean.cshtml
+++ b/DemoApp/Pages/Partial/FixedBoolean.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DemoApp.Models
-@using DemoApp.Models.Fagsystem
+@using DemoApp.Models.Simulator
 @model DemoApp.Models.ViewModels.PropertyRendererModel
 @{
     var prefilled = Model.Melding.GetPrefilledValueFor(Model.GetId());
