--- a/DemoApp/wwwroot/css/site.css
+++ b/DemoApp/wwwroot/css/site.css
@@ -47,12 +47,25 @@ body {
 
 .collapse-image {
     position: relative;
-    top: -5px;
+/*    top: -5px;*/
     width: 20px;
     height: 20px;
     cursor: pointer;
+    margin-top: 7px;
+    float: left;
+    display:inline;
 }
 
+.addNothing{
+    margin: 0px;
+    padding: 0px;
+    border: none;
+}
+
+.error_element {
+    display: inline-block;
+    min-width: 400px;
+}
 /*.custom-checkbox {
     position: relative;
     display: inline-block;
@@ -77,9 +90,6 @@ body {
     .custom-checkbox input:checked + .checkbox-image {
         transform: rotate(90deg);
     }*/
-
-
-
 .collapseContainer {
     border: none;
     margin: 0px;
@@ -160,10 +170,21 @@ body {
     margin-right: 10px;
 }
 
+.minlength_markor {
+    font-style: italic;
+    padding-left: 6px;
+    color: #565051;
+}
+
 .obligatorisk_markor {
     color: red;
     padding-left: 3px;
 }
+
+    .obligatorisk_markor.disabled {
+        color: silver !important;
+    }
+
 .disabled_button .obligatorisk_markor {
     color: silver;
     padding-left: 3px;
@@ -232,4 +253,67 @@ body {
         transform: rotate(90deg);
     }
 
+.dimensjon_tittel {
+    background-color: lightgrey;
+}
 
+.melding_liste td, th {
+    padding-left: 1em;
+    padding-right: 1em;
+}
+.melding_liste th {
+    background-color: silver;
+}
+
+/*Lånt fra W3C*/
+.dropbtn {
+    background-color: #D0D0D0;
+    border-radius: 4px;
+    color: black;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    padding: 0.4em 0.2em;
+    white-space: nowrap;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    /* Links inside the dropdown */
+    .dropdown-content div {
+        color: black;
+        text-decoration: none;
+        display: block;
+    }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content div:hover {
+            background-color: #c1c1c1;
+            cursor: pointer;
+        }
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    margin: 1px solid black;
+    border-radius: 4px;
+    background-color: #c9c9c9;
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
+}
